styles/style.css
/* Reset */

* {
  box-sizing: border-box;
}

html, body {
  width: 100%;
  max-width: 100%;
  height: 100%;
  font-size: 16px;
  font-family: 'Oxygen', sans-serif;
  font-weight: 400;
  padding: 0;
  margin: 0;
  background-color: #FFFDFC;
  color: #30292A;
}

/* Layout */

header {
  background-color: #30292A;
  background-image: url('../images/header-bg.jpg');
  background-size: cover;
  background-position: center;
  height: 120px;
  color: #FFFDFC;
}

main {
  padding: 2em;
}

#profile-pic {
  position: absolute;
  left: 0;
  top: 0;
  padding: 10px;
}

#headline {
  margin-left: 120px;
  padding: 25px 0;
}

#headline p {
  margin: 0;
}

#social {
  position: absolute;
  top: 0;
  right: 0;
  padding: 50px;
}

.wrapper {
  width: 1200px;
  max-width: 100%;
  margin: 0 auto;
  position: relative;
}

footer {
  padding: 1em 2em;
  text-align: center;
  font-size: 0.8em;
}


/* Text Format */

h2, h3, h4 {
  font-weight: 400;
  margin: 0;
  padding-bottom: 2px;
  border-bottom: 2px solid #30292A;
  display: inline-block;
}

h1 {
  font-family: 'Anton', sans-serif;  
  margin: 0;
  font-weight: 400;
}

p {
  margin: 0 0 1em 0;
}

header a {
  text-decoration: none;
  background-color: #FFFDFC;
  color: #30292A;
  padding: 0.25em;
  margin: 0.25em;
  transition: all 0.3s;
}

header a:hover,
header a:focus,
header a:active {
  padding: 0.5em 0.25em;
  
}

.callout {
  font-size: 1.5em;
}

.hidden {
  height: 0;
  text-indent: -9999px;
}

.menu.inline {
  display: inline-block;
}

.round {
  line-height: 0;
}

.round img {
  height: 100px;
  width: 100px;
  border-radius: 50%;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -0.5em;
}

.slide {
  flex: 1 1 500px;
  margin: 0.5em;
  position: relative;
  border-radius: 3px;
  height: 400px;
  border: 2px solid #CCCCCC;
  }

.slide > div {
  background-color: rgba(255,255,255,0.9);
  padding: 0.5em;
}

.slide img {
  max-width: 100%;
}

/* Slide bg images */

.slide {
  background-position: center;
  background-size: 100%;
  transition: all 0.3s;

}



#about {
  background-image: url('../images/hfc-about.png');
}

#about:hover,
#about:focus,
#about:active {
background-image: url('../images/search-compare.png');
}

#main {
  background-image: url('../images/hfc-home-desktop.png');
}

#main:hover,
#main:focus,
#main:active {
background-image: url('../images/apply-views.png');
}

#accessibility {
  background-image: url('../images/accessibility-before.png');
}

#accessibility:hover,
#accessibility:focus,
#accessibility:active {
background-image: url('../images/accessibility-graph.png');
}

#portal {
  background-image: url('../images/new-student-alert.png');
  background-position: top;
}

#portal:hover,
#portal:focus,
#portal:active {
    background-image: url('../images/current-student-alert.png');

}

